[gd_scene load_steps=2 format=3 uid="uid://bm372fh36rqup"]

[ext_resource type="Script" path="res://gameplay/game_start.gd" id="1_icffp"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_icffp")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.714989, 0.263309, 1)
theme_override_font_sizes/font_size = 40
text = "Snake Game"

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="ScoreLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0.666127, 0.358097, 1)
text = "High Score:"

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
